ajout dependance jdbc6 pom.xml

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -17,6 +17,13 @@
     <version.jjwt>0.7.0</version.jjwt>
   </properties>
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
+<dependency>
+    <groupId>oracle</groupId>
+    <artifactId>ojdbc6</artifactId>
+    <version>11.2.0.3</version>
+</dependency>
+  
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-catalina</artifactId>
