--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -17,14 +17,18 @@
     <version.jjwt>0.7.0</version.jjwt>
   </properties>
   <dependencies>
-  <!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
-    <!--
-<dependency>
+ <dependency>
     <groupId>com.oracle</groupId>
     <artifactId>ojdbc6</artifactId>
     <version>11.2.0.3</version>
 </dependency>
-  -->
+<repositories>
+    <repository>
+      <id>codelds</id>
+      <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+    </repository>
+  </repositories>
+    
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-catalina</artifactId>
@@ -91,7 +95,7 @@
     </dependency>
 
   </dependencies>
-  <!--
+  
   <build>
     <finalName>musicandbeerspairing-api</finalName>
     <plugins>
@@ -150,5 +154,4 @@
       </plugin>
     </plugins>
   </build>
-  -->
 </project>
