--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -149,7 +149,7 @@
     <artifactId>maven-war-plugin</artifactId>
     <configuration>
         <attachClasses>true</attachClasses>
-        <webXml>target/web.xml</webXml>
+        <webXml>target/musicandbeerspairing-api/WEB-INF/web.xml</webXml>
         <webResources>
             <resource>
                 <directory>src/main/webapp</directory>
